--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "lite-server -c=bs-config.json",
     "prestart": "npm run build",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start:node": "concurrently \"npm run build:watch\" \"node ./bin/www\"",
     "protractor": "protractor",
     "webdriver:update": "webdriver-manager update --standalone false --gecko false",
     "pretest": "npm run build",
@@ -22,6 +23,7 @@
     "build:cli": "ng build --no-progress",
     "serve:cli": "http-server dist/",
     "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
+    "build:prod": "ngc -p ./src/tsconfig.aot.json && ngc -p ./src/tsconfig.aot.json && webpack --config ./config/webpack.prod.js --progress --profile --bail && del 'dist/**/*.js' 'dist/**/*.js.map' '!dist/**/*.bundle.js' '!dist/**/*.chunk.js' 'src/**/*.ngfactory.ts' 'src/**/*.shim.ts'",
     "serve:aot": "lite-server -c bs-config.aot.json",
     "start:webpack": "webpack-dev-server --inline --progress --port 8080",
     "test:webpack": "karma start karma.webpack.conf.js",
@@ -51,7 +53,14 @@
     "d3": "^4.7.4",
     "rxjs": "5.0.1",
     "systemjs": "0.19.39",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.7.4",
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "hbs": "~4.0.1",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.0",
@@ -64,6 +73,7 @@
     "@types/angular-sanitize": "^1.3.3",
     "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.45",
+    "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
     "babel-cli": "^6.16.0",
