--- a/package.json
+++ b/package.json
@@ -3,34 +3,36 @@
   "version": "1.0.0",
   "private": true,
   "description": "Master package.json, the superset of all dependencies for all of the _example package.json files. See _boilerplate/package.json for example npm scripts.",
-  "scripts": {
-    "build": "tsc -p src/",
-    "build:watch": "tsc -p src/ -w",
-    "build:e2e": "tsc -p e2e/",
-    "serve": "lite-server -c=bs-config.json",
+  "old-scripts": {
     "prestart": "npm run build",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    "start:node": "concurrently \"npm run build:watch\" \"node ./bin/www\"",
-    "protractor": "protractor",
-    "webdriver:update": "webdriver-manager update --standalone false --gecko false",
     "pretest": "npm run build",
-    "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
-    "pretest:once": "npm run build",
-    "test:once": "karma start karma.conf.js --single-run",
-    "lint": "tslint ./src/**/*.ts -t verbose",
+    "webdriver:update": "webdriver-manager update --standalone false --gecko false",
+    "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
+    "serve": "lite-server -c=bs-config.json",
+    "serve:aot": "lite-server -c bs-config.aot.json",
+    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "build:upgrade": "tsc",
     "serve:upgrade": "http-server",
     "build:cli": "ng build --no-progress",
     "serve:cli": "http-server dist/",
-    "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
-    "build:prod": "ngc -p ./src/tsconfig.aot.json && ngc -p ./src/tsconfig.aot.json && webpack --config ./config/webpack.prod.js --progress --profile --bail && del 'dist/**/*.js' 'dist/**/*.js.map' '!dist/**/*.bundle.js' '!dist/**/*.chunk.js' 'src/**/*.ngfactory.ts' 'src/**/*.shim.ts'",
-    "serve:aot": "lite-server -c bs-config.aot.json",
     "start:webpack": "webpack-dev-server --inline --progress --port 8080",
-    "test:webpack": "karma start karma.webpack.conf.js",
-    "build:webpack": "rimraf dist && webpack --config config/webpack.prod.js --bail",
-    "build:babel": "babel src -d src --extensions \".es6\" --source-maps",
+    "protractor": "protractor",
     "copy-dist-files": "node ./copy-dist-files.js",
+    "build:babel": "babel src -d src --extensions \".es6\" --source-maps",
     "i18n": "ng-xi18n"
+  },
+  "scripts": {
+    "build": "tsc -p src/",
+    "build:watch": "tsc -p src/ -w",
+    "build:e2e": "tsc -p e2e/",
+    "start": "concurrently \"npm run build:watch\" \"node ./bin/www\"",
+    "test": "concurrently \"npm run build:watch\" \"karma start karma.webpack.conf.js\"",
+    "pretest:once": "npm run build",
+    "test:once": "karma start karma.conf.js --single-run",
+    "lint": "tslint ./src/**/*.ts -t verbose",
+    "build:prod": "ngc -p ./src/tsconfig.aot.json && ngc -p ./src/tsconfig.aot.json && webpack --config ./config/webpack.prod.js --progress --profile --bail && del 'dist/**/*.js' 'dist/**/*.js.map' '!dist/**/*.bundle.js' '!dist/**/*.chunk.js' 'src/**/*.ngfactory.ts' 'src/**/*.shim.ts'",
+    "test:webpack": "karma start karma.webpack.conf.js",
+    "build:webpack": "rimraf dist && webpack --config config/webpack.prod.js --bail"
   },
   "keywords": [],
   "author": "",
@@ -92,6 +94,7 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
+    "karma-handlebars-preprocessor": "^0.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
