updated webpack building to work with node better

--- a/bs-config.json
+++ b/bs-config.json
@@ -1,8 +1,6 @@
 {
-  "server": {
-    "baseDir": "src",
-    "routes": {
-      "/node_modules": "node_modules"
-    }
-  }
+    "files" : "./src/**/*.{js, html, css, hbs}",
+    "server" : { "baseDir" : "./src" },
+    "https" : true,
+    "browser" : ["google-chrome", "firefox"]
 }
