--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "serve:upgrade": "http-server",
     "build:cli": "ng build --no-progress",
     "serve:cli": "http-server dist/",
-    "start:webpack": "webpack-dev-server --inline --progress --port 8080",
     "protractor": "protractor",
     "copy-dist-files": "node ./copy-dist-files.js",
     "build:babel": "babel src -d src --extensions \".es6\" --source-maps",
@@ -25,13 +24,16 @@
     "build": "tsc -p src/",
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "tsc -p e2e/",
-    "start": "concurrently \"npm run build:watch\" \"node ./bin/www\"",
+    "mongo": "mongod --dbpath /usr/local/data/db",
+    "start": "concurrently \"npm run build:wpwatch\" \"node ./bin/www\"",
     "test": "concurrently \"npm run build:watch\" \"karma start karma.webpack.conf.js\"",
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "build:prod": "ngc -p ./src/tsconfig.aot.json && ngc -p ./src/tsconfig.aot.json && webpack --config ./config/webpack.prod.js --progress --profile --bail && del 'dist/**/*.js' 'dist/**/*.js.map' '!dist/**/*.bundle.js' '!dist/**/*.chunk.js' 'src/**/*.ngfactory.ts' 'src/**/*.shim.ts'",
     "test:webpack": "karma start karma.webpack.conf.js",
+    "start:webpack": "webpack-dev-server --inline --progress --port 8080",
+    "build:wpwatch": "rimraf dist && webpack --config config/webpack.dev.js --progress --profile --watch",
     "build:webpack": "rimraf dist && webpack --config config/webpack.prod.js --bail"
   },
   "keywords": [],
@@ -51,18 +53,20 @@
     "@angular/tsc-wrapped": "^0.5.0",
     "@angular/upgrade": "2.4.5",
     "angular-in-memory-web-api": "~0.2.4",
-    "core-js": "^2.4.1",
-    "d3": "^4.7.4",
-    "rxjs": "5.0.1",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.7.4",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "core-js": "^2.4.1",
+    "d3": "^4.7.4",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hbs": "~4.0.1",
+    "mongoose": "^4.9.4",
+    "mongoose-unique-validator": "^1.0.5",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "rxjs": "5.0.1",
+    "serve-favicon": "~2.3.0",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.0",
@@ -81,6 +85,7 @@
     "babel-cli": "^6.16.0",
     "babel-preset-angular2": "^0.0.2",
     "babel-preset-es2015": "^6.16.0",
+    "browser-sync": "^2.18.8",
     "canonical-path": "0.0.2",
     "concurrently": "^3.0.0",
     "css-loader": "^0.26.1",
