--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "pretest": "npm run build",
     "webdriver:update": "webdriver-manager update --standalone false --gecko false",
     "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
-    "serve": "lite-server -c=bs-config.json",
     "serve:aot": "lite-server -c bs-config.aot.json",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "build:upgrade": "tsc",
@@ -26,9 +25,9 @@
   },
   "scripts": {
     "lint": "tslint -c tslint.json ./src/**/*.ts",
-    "build:watch": "rimraf serve/public serve/views/index.hbs && mkdir serve/public && webpack --config config/webpack.dev.js --watch",
+    "build:watch": "rimraf serve/public && mkdir serve/public && webpack --config config/webpack.dev.js --watch",
     "build:prod": "rimraf dist && webpack --config config/webpack.prod.js --bail",
-    "serve:node": "node serve/bin/www",
+    "serve:node": "babel-node serve/bin/www",
     "serve:prod": "",
     "share:test": "lt --port 9876 --subdomain zing-test",
     "share:dev": "lt --port 4000 --subdomain zing-dev",
@@ -56,6 +55,10 @@
     "@angular/tsc-wrapped": "^0.5.0",
     "@angular/upgrade": "2.4.5",
     "angular-in-memory-web-api": "~0.2.4",
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-angular2": "^0.0.2",
+    "babel-preset-es2015": "^6.16.0",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
@@ -63,6 +66,7 @@
     "debug": "^2.6.6",
     "express": "^4.15.2",
     "hbs": "^4.0.1",
+    "mongoose": "^4.9.9",
     "morgan": "^1.8.1",
     "npm-run-all": "^4.0.2",
     "rxjs": "5.0.1",
@@ -84,9 +88,6 @@
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
-    "babel-cli": "^6.16.0",
-    "babel-preset-angular2": "^0.0.2",
-    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.18.8",
     "canonical-path": "0.0.2",
     "concurrently": "^3.0.0",
