--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "i18n": "ng-xi18n"
   },
   "scripts": {
-    "lint": "tslint -c tslint.json ./src/**/*.ts",
-    "build:watch": "rimraf serve/public && mkdir serve/public && webpack --config config/webpack.dev.js --watch",
+    "lint": "tslint -c tslint.json ./ng-assets/**/*.ts",
+    "build:watch": "rimraf dist && mkdir dist && webpack --config config/webpack.dev.js --watch",
     "build:prod": "rimraf dist && webpack --config config/webpack.prod.js --bail",
-    "serve:node": "babel-node serve/bin/www",
+    "serve:node": "nodemon --watch serve serve/bin/www",
     "serve:prod": "",
     "share:test": "lt --port 9876 --subdomain zing-test",
     "share:dev": "lt --port 4000 --subdomain zing-dev",
@@ -56,8 +56,8 @@
     "@angular/upgrade": "2.4.5",
     "angular-in-memory-web-api": "~0.2.4",
     "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
     "babel-preset-angular2": "^0.0.2",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.16.0",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
@@ -67,6 +67,7 @@
     "express": "^4.15.2",
     "hbs": "^4.0.1",
     "mongoose": "^4.9.9",
+    "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.8.1",
     "npm-run-all": "^4.0.2",
     "rxjs": "5.0.1",
@@ -114,6 +115,7 @@
     "lite-server": "^2.2.2",
     "localtunnel": "^1.8.2",
     "lodash": "^4.16.2",
+    "nodemon": "^1.11.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~4.0.14",
