--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "scripts": {
     "lint": "tslint -c tslint.json ./ng-assets/**/*.ts",
+    "premockapi": "babel-node serve/bin/mockdb.js",
+    "mockapi": "json-server --watch tmp/db.json --port 4001",
     "build:watch": "rimraf dist && mkdir dist && webpack --config config/webpack.dev.js --watch",
     "build:prod": "rimraf dist && webpack --config config/webpack.prod.js --bail",
     "serve:node": "nodemon --watch serve serve/bin/www",
@@ -103,6 +105,8 @@
     "http-server": "^0.9.0",
     "jasmine": "~2.4.1",
     "jasmine-core": "~2.4.1",
+    "json-schema-faker": "^0.4.1",
+    "json-server": "^0.10.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
