--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:once": "",
     "test:webpack": "karma start karma.webpack.conf.js",
     "test": "npm run test:once",
-    "start:dev": "npm-run-all --parallel build:watch security-check serve:node",
+    "start:dev": "npm-run-all --parallel build:watch security-check serve:node mockapi",
     "start": "npm run start:dev"
   },
   "keywords": [],
