--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "babel-preset-es2015": "^6.16.0",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
+    "cor": "0.0.0",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "d3": "^4.7.4",
     "debug": "^2.6.6",
     "del-cli": "^1.0.0",
