--- a/package.json
+++ b/package.json
@@ -25,19 +25,26 @@
   },
   "scripts": {
     "lint": "tslint -c tslint.json ./ng-assets/**/*.ts",
-    "premockapi": "del-cli tmp/db.json && babel-node serve/bin/mockdb.js",
+    "build:mockapi": "babel-node test/mockdb.js",
     "mockapi": "json-server --watch tmp/db.json --port 4001",
     "build:watch": "rimraf dist && mkdir dist && webpack --config config/webpack.dev.js --watch",
-    "build:prod": "rimraf dist && webpack --config config/webpack.prod.js --bail",
-    "serve:node": "nodemon --watch serve serve/bin/www",
-    "serve:prod": "",
+    "build:prod": "webpack --config config/webpack.prod.js --bail",
+    "serve:cli": "http-server dist/",
     "share:test": "lt --port 9876 --subdomain zing-test",
     "share:dev": "lt --port 4000 --subdomain zing-dev",
     "security-check": "nsp check",
     "test:webpack": "karma start karma.webpack.conf.js",
     "test": "npm run test:webpack -- --single-run",
-    "start:dev": "npm-run-all --parallel build:watch security-check serve:node mockapi",
-    "start": "npm run start:dev"
+    "prestart:dev": "npm run build:mockapi",
+    "start:dev": "npm-run-all --parallel build:watch security-check serve:cli mockapi",
+    "start:prod": "babel-node serve/bin/www",
+    "start": "npm run start:dev",
+    "clean:dist": "rimraf dist && mkdir dist",
+    "clean:gen": "del-cli 'ng-assets/**/*.ngfactory.ts' 'ng-assets/**/*.ngsummary.json'",
+    "prebuild": "npm-run-all clean:dist test",
+    "build": "ngc -p tsconfig.prod.json && rimraf dist/* && babel-node build/prod.js",
+    "postbuild": "npm-run-all --parallel clean:gen serve:cli mockapi",
+    "deploy": "surge ./dist/"
   },
   "keywords": [],
   "author": "",
@@ -62,7 +69,6 @@
     "babel-preset-es2015": "^6.16.0",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
-    "cor": "0.0.0",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
     "d3": "^4.7.4",
@@ -133,6 +139,7 @@
     "rollup-plugin-uglify": "^1.0.1",
     "source-map-explorer": "^1.3.2",
     "style-loader": "^0.13.1",
+    "surge": "^0.19.0",
     "ts-node": "^1.3.0",
     "tslint": "^3.15.1",
     "typescript": "~2.0.10",
