--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -9,13 +9,19 @@
     "lib": [ "es2015", "dom" ],
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
+    "outDir": "./dist",
     "typeRoots": [
       "./node_modules/@types/"
     ]
   },
   "compileOnSave": true,
+  "angularCompilerOptions": {
+    "genDir": "./",
+    "skipMetadataEmit": true
+  },
   "exclude": [
     "node_modules/*",
-    "ng-assets/main.ts"
+    "tmp/*",
+    "ng-assets/polyfills.ts"
   ]
 }
